# Basic-OpenGL-with-GLFW-Sprite-Batching

./: CMakeLists.txt  IncludesAndLinks.txt  README!.txt  README.md  README.txt  igme_config.yml  setup  setup.cmd
SpriteBatch/: SpriteBatch.sln  SpriteBatch.vcxproj  SpriteBatch.vcxproj.filters  main.cpp  spriteBatcher.cpp  spriteBatcher.h  texture.cpp
header/: shader.h  spriteBatcher.h  texture.h
shaders/: fragment.glsl  vertex.glsl
source/: main.cpp  shader.cpp  spriteBatcher.cpp  texture.cpp
